--- a/Rou.BlogPost.Api/appsettings.Development.json
+++ b/Rou.BlogPost.Api/appsettings.Development.json
@@ -2,9 +2,21 @@
     "Logging": {
         "IncludeScopes": false,
         "LogLevel": {
-            "Default": "Debug",
-            "System": "Information",
-            "Microsoft": "Information"
+            "Default": "None",
+            "System": "None",
+            "Microsoft": "None"
+        },
+        "Debug": {
+            "LogLevel": {
+                "Default": "Trace",
+                "System": "None",
+                "Microsoft": "Information"
+            }
+        },
+        "Console": {
+            "LogLevel": {
+                "Default": "Warning"
+            }
         }
     },
     "ConnectionStrings": {
