--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,29 @@ Rou.BlogPost.Model/obj/Debug/netstandard2.0/Rou.BlogPost.Model.csproj.CoreCompil
 Rou.BlogPost.Core/obj/Debug/netstandard2.0/Rou.BlogPost.Core.csproj.CoreCompileInputs.cache
 Rou.BlogPost.Model/bin/Debug/netstandard2.0/Rou.BlogPost.Model.dll
 Rou.BlogPost.Model/obj/Debug/netstandard2.0/Rou.BlogPost.Model.dll
+Rou.BlogPost.Api/obj/Debug/netcoreapp2.0/Rou.BlogPost.Api.csproj.CoreCompileInputs.cache
+Rou.BlogPost.Api/bin/Debug/netcoreapp2.0/Rou.BlogPost.Api.dll
+Rou.BlogPost.Api/bin/Debug/netcoreapp2.0/Rou.BlogPost.Api.pdb
+Rou.BlogPost.Api/bin/Debug/netcoreapp2.0/Rou.BlogPost.Api.deps.json
+Rou.BlogPost.Api/bin/Debug/netcoreapp2.0/Rou.BlogPost.Core.dll
+Rou.BlogPost.Api/bin/Debug/netcoreapp2.0/Rou.BlogPost.Core.pdb
+Rou.BlogPost.Api/bin/Debug/netcoreapp2.0/Rou.BlogPost.Model.dll
+Rou.BlogPost.Api/obj/Rou.BlogPost.Api.csproj.nuget.cache
+Rou.BlogPost.Api/obj/project.assets.json
+Rou.BlogPost.Api/obj/Debug/netcoreapp2.0/Rou.BlogPost.Api.dll
+Rou.BlogPost.Api/obj/Debug/netcoreapp2.0/Rou.BlogPost.Api.pdb
+Rou.BlogPost.Model/obj/Debug/netstandard2.0/Rou.BlogPost.Model.dll
+Rou.BlogPost.Core/bin/Debug/netstandard2.0/Rou.BlogPost.Core.dll
+Rou.BlogPost.Core/bin/Debug/netstandard2.0/Rou.BlogPost.Core.pdb
+Rou.BlogPost.Core/bin/Debug/netstandard2.0/Rou.BlogPost.Model.dll
+Rou.BlogPost.Core/obj/Debug/netstandard2.0/Rou.BlogPost.Core.dll
+Rou.BlogPost.Core/obj/Debug/netstandard2.0/Rou.BlogPost.Core.pdb
+Rou.BlogPost.Model/bin/Debug/netstandard2.0/Rou.BlogPost.Model.dll
+Rou.BlogPost.Api/obj/Debug/netcoreapp2.0/Rou.BlogPost.Api.csproj.CoreCompileInputs.cache
+Rou.BlogPost.Model/obj/Debug/netstandard2.0/Rou.BlogPost.Model.dll
+Rou.BlogPost.Core/bin/Debug/netstandard2.0/Rou.BlogPost.Core.dll
+Rou.BlogPost.Core/bin/Debug/netstandard2.0/Rou.BlogPost.Core.pdb
+Rou.BlogPost.Core/bin/Debug/netstandard2.0/Rou.BlogPost.Model.dll
+Rou.BlogPost.Core/obj/Debug/netstandard2.0/Rou.BlogPost.Core.dll
+Rou.BlogPost.Core/obj/Debug/netstandard2.0/Rou.BlogPost.Core.pdb
+Rou.BlogPost.Model/bin/Debug/netstandard2.0/Rou.BlogPost.Model.dll
