--- a/Rou.BlogPost.Api/appsettings.json
+++ b/Rou.BlogPost.Api/appsettings.json
@@ -13,6 +13,6 @@
         }
     },
     "ConnectionStrings": {
-        "DefaultConnection": "Server=tcp:routdss-sid.database.windows.net,1433;Initial Catalog=routdss-dev;Persist Security Info=False;User ID=dss_admin;Password=S8ipra17@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+        "DefaultConnection": "***"
     }
 }
